adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit exercitationem quisquam culpa assumenda molestias suscipit dolorem vitae voluptate sapiente id? Id, magni? Eius laboriosam sit aliquid. Officia facere officiis libero?</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur repudiandae, tempore numquam perspiciatis eius quis molestias, voluptatum iure quibusdam blanditiis a earum optio sed! Quas facere rerum eligendi est obcaecati.</p>
 </body>
 </html>
